--- a/src/components/teacherDashboard/topicCreator/TopicCreator.module.css
+++ b/src/components/teacherDashboard/topicCreator/TopicCreator.module.css
@@ -19,3 +19,19 @@
     color: #fff;
     cursor: pointer;
 }
+
+@media (max-width: 600px) {
+    .toolbar-container {
+        gap: 0.5rem;
+        overflow-y: auto;
+    }
+
+    .add-btn {
+        width: auto;
+        padding-inline: 0.5rem;
+    }
+
+    .add-btn-text {
+        display: none;
+    }
+}
