Update modal, create error modal and use error modal in teacher dashboard.

--- a/src/components/button/cancelButton/CancelButton.module.css
+++ b/src/components/button/cancelButton/CancelButton.module.css
@@ -5,6 +5,7 @@
     border-radius: 6px;
     border: none;
     cursor: pointer;
+    font-size: clamp(13px, 3vw, 17px);
     transition: background-color 0.2s ease-in-out;
 }
 
