--- a/src/components/modal/modal/Modal.module.css
+++ b/src/components/modal/modal/Modal.module.css
@@ -1,5 +1,7 @@
-.container {
-    position: absolute;
+.modal-backdrop {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
     left: 0;
     right: 0;
     top: 0;
@@ -7,18 +9,28 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: transparent;
     z-index: 10;
+    background-color: rgba(0, 0, 0, 0.7);
 }
 
-.box {
+.modal {
     padding: clamp(1rem, 3vw, 2rem);
-    background-color: var(--blue-ltu);
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    border-radius: 4px;
     gap: 40px;
+}
+
+.info {
+    background-color: var(--blue-ltu);
+    border: 2px solid rgb(32, 1, 61);
+}
+
+.warning {
+    background-color: rgb(148, 4, 4);
+    border: 2px solid rgb(61, 1, 1);
 }
 
 .text {
@@ -26,19 +38,6 @@
     font-size: clamp(15px, 4vw, 20px);
     font-weight: 600;
     text-align: center;
-}
-
-.btn {
-    border: none;
-    padding-block: 15px;
-    padding-inline: 60px;
-    background-color: var(--btnLight-bg);
-    color: var(--btnLight-text);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: clamp(13px, 3vw, 17px);
-    cursor: pointer;
 }
 
 .btn:hover {
