--- a/src/components/text/headers/Headers.module.css
+++ b/src/components/text/headers/Headers.module.css
@@ -1,4 +1,11 @@
 .title {
     font-size: clamp(1rem, 2.7vw, 1.7rem);
+}
+
+.color-black {
     color: #000;
+}
+
+.color-white {
+    color: #fff;
 }
