Updates to AnswerCard

--- a/src/globalStyles.module.css
+++ b/src/globalStyles.module.css
@@ -7,7 +7,7 @@
     gap: clamp(25px, 3vw, 40px);
 }
 
-.containerBorder {
+.container-border {
     border: 2px solid var(--grey-strong);
     border-radius: var(--border-radius);
 }
