--- a/src/components/answerCard/answerCardVote/AnswerCardVote.module.css
+++ b/src/components/answerCard/answerCardVote/AnswerCardVote.module.css
@@ -1,5 +1,5 @@
 .container {
-    background-color: var(--grey-light);
+    background-color: rgb(234, 234, 234);
     padding: 1rem;
     border-radius: 2rem;
     margin: 2rem;
