93 update question card with text body (#46)
* Updates to AnswerCard

* Update to AnswerCardVote

* Create custom hook for delete data.

* Create custom hook for post and put data.

* Update generic post, put, delete and get hooks.

* prettier update

--- a/src/global.css
+++ b/src/global.css
@@ -17,7 +17,7 @@ html {
     --btnDark-text: white;
     --btnDark-hover: gray;
     --grey-light: lightgray;
-    --green-resolved: rgb(80, 200, 120);
+    --green-resolved: #50c878;
     --green-success: rgb(36, 125, 66);
     --yellow-not-resolved: rgb(255, 170, 51);
     --grey-strong: gray;
