--- a/src/components/answerCardComments/answerCardComments/AnswerCardComments.module.css
+++ b/src/components/answerCardComments/answerCardComments/AnswerCardComments.module.css
@@ -1,6 +1,9 @@
 .container {
     padding: 1rem;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 }
 
 .header {
@@ -8,19 +11,44 @@
     flex-direction: row;
     justify-content: start;
     align-items: center;
-    gap: 1rem;
+    gap: 0.5rem;
+    cursor: pointer;
+    width: 260px;
+    border-bottom: 2px solid transparent;
 }
 
-.toolbar-icon {
+.header-label {
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+.header-label:hover {
+    text-decoration: underline;
+    text-underline-offset: 4px;
+}
+
+.label-icon {
+    width: 2rem;
+    height: 2rem;
+    padding: 4px;
+}
+
+.open-icon {
     width: 2rem;
     height: 2rem;
     padding: 4px;
     border-radius: 50%;
     cursor: pointer;
-    filter: invert(1);
+    transition: rotate 0.1s ease-out;
 }
 
-.toolbar-icon:hover {
+.open-icon-hide {
+    rotate: 90deg;
+}
+
+.open-icon:hover {
     background-color: var(--grey-strong);
-    filter: invert(0);
 }
