Update create, delete, and put comments.

--- a/src/components/answerCardComments/commentUpdater/CommentUpdater.module.css
+++ b/src/components/answerCardComments/commentUpdater/CommentUpdater.module.css
@@ -7,11 +7,6 @@
 }
 
 .text-area {
+    background-color: white;
     flex: 1;
-}
-
-.comment-btn-ctr {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
 }
