--- a/src/components/modal/modal/Modal.module.css
+++ b/src/components/modal/modal/Modal.module.css
@@ -1,6 +1,7 @@
 .modal-backdrop {
     position: fixed;
-    width: 100vw;
+    /* use 100% instead of 100vw to not take into account vertical scrollbar */
+    width: 100%;
     height: 100vh;
     left: 0;
     right: 0;
@@ -11,6 +12,7 @@
     align-items: center;
     z-index: 10;
     background-color: rgba(0, 0, 0, 0.7);
+    padding-inline: 1rem;
 }
 
 .modal {
@@ -21,6 +23,11 @@
     flex-direction: column;
     border-radius: 4px;
     gap: 40px;
+}
+
+.btnsContainer {
+    display: flex;
+    gap: 1rem;
 }
 
 .info {
@@ -40,6 +47,18 @@
     text-align: center;
 }
 
-.btn:hover {
-    background-color: var(--btnLight-hover);
+.cancel-button {
+    padding-block: 16px;
+    padding-inline: clamp(35px, 10vw, 64px);
+    background-color: var(--btnLight-bg);
+    color: var(--btnLight-text);
+    border-radius: 6px;
+    border: none;
+    cursor: pointer;
+    font-size: clamp(13px, 3vw, 17px);
+    transition: background-color 0.2s ease-in-out;
+}
+
+.cancel-button:hover {
+    background-color: #d1d5db;
 }
