--- a/src/components/modal/infoModal/dynamicTooltip/DynamicTooltip.module.css
+++ b/src/components/modal/infoModal/dynamicTooltip/DynamicTooltip.module.css
@@ -1,8 +1,9 @@
 .tooltip {
     position: absolute;
-    background: rgba(0, 0, 0);
+    background: yellow;
     border: 4px solid red;
-    color: white;
+    color: black;
+    font-weight: bolder;
     padding: 8px 12px;
     border-radius: 6px;
     font-size: 14px;
