--- a/src/components/modal/infoModal/infoModalBody/InfoModalBody.module.css
+++ b/src/components/modal/infoModal/infoModalBody/InfoModalBody.module.css
@@ -1,32 +1,33 @@
 .container {
-    background: white;
-    margin: 1rem;
-    padding: 1rem;
-    width: 60vw;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 80vw;
+    max-width: 1000px;
+}
+
+.body {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
 }
 
 .hide-pointer-events {
     pointer-events: none;
 }
 
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.slideContainer {
+.slide-container {
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: white;
+    border-radius: 10px;
 }
 
-.navigation {
-    margin-top: 20px;
-    display: flex;
-    justify-content: space-between;
-    width: 300px;
+.footer {
+    color: white;
 }
 
 button {
