--- a/src/components/loader/LoaderSharedStyles.module.css
+++ b/src/components/loader/LoaderSharedStyles.module.css
@@ -1,5 +1,7 @@
 .container {
-    position: absolute;
+    position: fixed;
+    height: 100vh;
+    width: 100%;
     left: 0;
     right: 0;
     top: 0;
