--- a/src/components/questionCard/questionCardMiddle/QuestionCardMiddle.module.css
+++ b/src/components/questionCard/questionCardMiddle/QuestionCardMiddle.module.css
@@ -65,3 +65,7 @@
 .question-section > p:last-child {
     margin-top: clamp(20px, 3vw, 2rem);
 }
+
+.container:hover .title {
+    text-decoration: underline;
+}
