--- a/src/components/modal/userGuideModal/userGuide/UserGuide.module.css
+++ b/src/components/modal/userGuideModal/userGuide/UserGuide.module.css
@@ -1,6 +1,7 @@
 .container {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 1rem;
     width: 80vw;
     max-width: 1000px;
@@ -19,10 +20,11 @@
 
 .highlight-default {
     color: black;
-    background-color: rgb(255, 255, 0, 0.5);
+    background-color: rgb(255, 255, 0, 1);
     outline: 4px solid red;
 }
 
+.highlight-default-image,
 .highlight:hover {
     color: black;
     background-color: rgb(255, 255, 0, 0.5);
