--- a/src/components/userGuide/userGuide/UserGuide.module.css
+++ b/src/components/userGuide/userGuide/UserGuide.module.css
@@ -47,23 +47,22 @@
 
 .footer {
     display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
+    flex-direction: row;
+    align-items: center;
+    gap: 1rem;
     color: white;
 }
 
-button {
-    padding: 10px 15px;
-    border: none;
-    background: #007bff;
-    color: white;
-    border-radius: 5px;
+.navigation-btn {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
     cursor: pointer;
+    transition: transform 0.2s linear;
 }
 
-button:disabled {
-    background: gray;
-    cursor: not-allowed;
+.navigation-btn:hover {
+    transform: scale(1.3);
 }
 
 .nextEnter {
