--- a/src/components/userGuide/userGuide/UserGuide.module.css
+++ b/src/components/userGuide/userGuide/UserGuide.module.css
@@ -58,11 +58,13 @@
     height: 4rem;
     border-radius: 50%;
     cursor: pointer;
-    transition: transform 0.2s linear;
+    transition: all 0.2s linear;
+    filter: invert(0.2);
 }
 
 .navigation-btn:hover {
     transform: scale(1.3);
+    filter: invert(0);
 }
 
 .nextEnter {
