--- a/src/components/modal/modal/Modal.module.css
+++ b/src/components/modal/modal/Modal.module.css
@@ -10,13 +10,15 @@
     justify-content: center;
     align-items: center;
     z-index: 10;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
 .modal {
     padding: clamp(1rem, 3vw, 2rem);
+    max-height: 90%;
+    overflow-y: auto;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     flex-direction: column;
     border-radius: 4px;
@@ -33,7 +35,7 @@
     border: 2px solid rgb(61, 1, 1);
 }
 
-.text-container {
+.body {
     color: var(--textLight-default);
     font-size: clamp(15px, 4vw, 20px);
     font-weight: 600;
