--- a/src/components/button/editButton/EditButton.module.css
+++ b/src/components/button/editButton/EditButton.module.css
@@ -1,4 +1,8 @@
 .button {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
     padding: 8px 16px;
     background-color: var(--btnLight-bg);
     color: var(--btnLight-text);
