--- a/src/components/answerCard/AnswerCardBottom/AnswerCardBottom.module.css
+++ b/src/components/answerCard/AnswerCardBottom/AnswerCardBottom.module.css
@@ -2,6 +2,7 @@
     display: flex;
     width: 100%; /* Ensures it takes full width */
     justify-content: space-between;
+    align-items: center;
 }
 
 @media (max-width: 600px) {
