--- a/src/components/forms/answerForm/AnswerForm.module.css
+++ b/src/components/forms/answerForm/AnswerForm.module.css
@@ -13,8 +13,9 @@
 
 .answer-btn-ctr {
     display: flex;
-    flex-direction: column;
-    align-items: end;
+    flex-direction: row;
+    justify-content: end;
+    gap: 1rem;
 }
 
 .answer-btn {
