--- a/src/components/adminDashboard/userManagement/UserManagement.module.css
+++ b/src/components/adminDashboard/userManagement/UserManagement.module.css
@@ -1,6 +1,10 @@
 .container {
     max-width: 1600px;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    align-items: center;
 }
 
 .loaderContainer {
@@ -19,6 +23,10 @@
     flex-direction: column;
     align-items: center;
     gap: clamp(20px, 3vw, 30px);
+}
+
+.foundInfo {
+    margin-bottom: -20px;
 }
 
 .inputPair {
