Update translation and refactor translation to be more scalable and still keep same performance.

--- a/src/components/answerCard/answerCardVote/AnswerCardVote.module.css
+++ b/src/components/answerCard/answerCardVote/AnswerCardVote.module.css
@@ -5,7 +5,7 @@
     background-color: rgb(234, 234, 234);
     padding: 0.2rem 1rem;
     border-radius: 2rem;
-    margin-left: 2rem;
+    margin-inline: 2rem;
     font-size: x-large;
     font-weight: 600;
     width: 10rem;
