--- a/src/components/adminDashboard/tagManagement/TagManagement.module.css
+++ b/src/components/adminDashboard/tagManagement/TagManagement.module.css
@@ -1,13 +1,9 @@
 .container {
     max-width: 1600px;
     width: 100%;
-}
-
-.loaderContainer {
-    margin-top: 10rem;
     display: flex;
-    width: 100%;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .form {
