--- a/src/components/answerCardComments/commentList/CommentList.module.css
+++ b/src/components/answerCardComments/commentList/CommentList.module.css
@@ -4,3 +4,11 @@
     flex-direction: column;
     gap: 1rem;
 }
+
+.container-no-comments {
+    padding-block: 1rem;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: center;
+}
