--- a/src/components/answerCard/answerCardToolbar/AnswerCardToolbar.module.css
+++ b/src/components/answerCard/answerCardToolbar/AnswerCardToolbar.module.css
@@ -5,20 +5,9 @@
     gap: 1rem;
 }
 
-.toolbar-btn {
-    display: flex;
-    justify-content: space-between;
-    gap: 1rem;
-    align-items: center;
-    padding: 0.5rem;
-}
-
 @media (max-width: 600px) {
-    .footer-toolbar {
-        gap: 1rem;
-    }
-
     .container {
+        margin-top: 1rem;
         padding: 0.5rem;
         gap: 0.5;
     }
