--- a/src/components/richText/RichTextShared.module.css
+++ b/src/components/richText/RichTextShared.module.css
@@ -71,6 +71,9 @@ h1 {
 
 .editor-input {
     min-height: 150px;
+}
+
+.input {
     resize: none;
     font-size: 15px;
     caret-color: rgb(5, 5, 5);
@@ -78,7 +81,7 @@ h1 {
     tab-size: 1;
     outline: 0;
     padding: 15px 10px;
-    caret-color: #444;
+    caret-color: #444; 
 }
 
 .editor-placeholder {
