--- a/src/components/adminDashboard/tagManagement/TagManagement.module.css
+++ b/src/components/adminDashboard/tagManagement/TagManagement.module.css
@@ -3,6 +3,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    gap: 40px;
     align-items: center;
 }
 
@@ -45,7 +46,9 @@
     border-collapse: collapse;
     display: table;
 }
-
+.foundInfo {
+    margin-bottom: -20px;
+}
 .tagTableCell {
     text-align: left;
     display: table-cell;
